рефакторинг модели настроек приложения